versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/Continuum.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalContinuum
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function ContinuumDefaultConst() &
      bind(C, name='ContinuumDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function ContinuumDefaultConst

!! Create, default
function ContinuumDefault() &
      bind(C, name='ContinuumDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function ContinuumDefault

!! Create, general, const
function ContinuumCreateConst( &
   XYs1d &
) &
      bind(C, name='ContinuumCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: XYs1d
   type(c_ptr) :: handle
end function ContinuumCreateConst

!! Create, general
function ContinuumCreate( &
   XYs1d &
) &
      bind(C, name='ContinuumCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: XYs1d
   type(c_ptr) :: handle
end function ContinuumCreate

!! Assign
subroutine ContinuumAssign(handleLHS, handleRHS) &
      bind(C, name='ContinuumAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine ContinuumAssign

!! Delete
subroutine ContinuumDelete(handle) &
      bind(C, name='ContinuumDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine ContinuumDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function ContinuumRead(handle, filename, filenameSize) &
      bind(C, name='ContinuumRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function ContinuumRead

!! Write to file
function ContinuumWrite(handle, filename, filenameSize) &
      bind(C, name='ContinuumWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function ContinuumWrite

!! Print to standard output, in our prettyprinting format
function ContinuumPrint(handle) &
      bind(C, name='ContinuumPrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function ContinuumPrint

!! Print to standard output, as XML
function ContinuumPrintXML(handle) &
      bind(C, name='ContinuumPrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function ContinuumPrintXML

!! Print to standard output, as JSON
function ContinuumPrintJSON(handle) &
      bind(C, name='ContinuumPrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function ContinuumPrintJSON


!! -----------------------------------------------------------------------------
!! Child: XYs1d
!! -----------------------------------------------------------------------------

!! Has
function ContinuumXYs1dHas(handle) &
      bind(C, name='ContinuumXYs1dHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ContinuumXYs1dHas

!! Get, const
function ContinuumXYs1dGetConst(handle) &
      bind(C, name='ContinuumXYs1dGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ContinuumXYs1dGetConst

!! Get
function ContinuumXYs1dGet(handle) &
      bind(C, name='ContinuumXYs1dGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ContinuumXYs1dGet

!! Set
subroutine ContinuumXYs1dSet(handle, fieldHandle) &
      bind(C, name='ContinuumXYs1dSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine ContinuumXYs1dSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalContinuum
